# cz-presentatie

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  Makefile.python.template  Makefile.terraform.template  README.md  SECURITY_AUDIT_REPORT.md  databricks.yml  demo-prompts  pyproject.toml  requirements.txt
.github/: copilot-instructions.md  pull_request_template.md
.github/ci-templates/: ci-nodejs.template.yml  ci-terraform.template.yml
.github/hooks/: pre-commit.template  terraform-pre-commit.template
.github/instructions/: README.md
.github/instructions/javascript/: nodejs.instructions.md  react.instructions.md
.github/instructions/python/: python-django.instructions.md  python-fastapi.instructions.md  python-general.instructions.md
.github/instructions/terraform/: terraform.instructions.md
.github/instructions/workflows/: tdd.instructions.md
.github/skills/: README.md
.github/skills/audit-security/: SKILL.md
.github/skills/create-prompt/: SKILL.md
.github/skills/create-spec/: SKILL.md
.github/skills/create-tasks/: SKILL.md
.github/skills/generate-prompt/: SKILL.md
.github/workflows/: ci.yml
docs/: DATABRICKS_EXECUTION.md  DEVELOPMENT.md  TROUBLESHOOTING.md  VIBE_CODING_GUIDE.md  spec.template.md
docs/adr/: ADR-001-monolithic-backend-architecture.md  ADR-002-async-io-by-default.md  README.md  adr.template.md
docs/specs/: spec.md  task-1-baseline-map.md  tasks.md
scripts/: README.md  append-makefile.py  append-precommit.py  databricks_mcp_server.py  enable-python.sh  enable-terraform.sh  run_claims_validation_from_tables.py
src/claims_validation/: __init__.py  engine.py  reporting.py  types.py
tests/: test_example.py
tests/claims_validation/: conftest.py  test_amount_rules.py  test_dataset_rules.py  test_date_rules.py  test_engine.py  test_error_contract.py  test_performance_harness.py  test_referential_rules.py  test_registry.py  test_runner_from_tables.py
(+8 files in other folders)
