[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copilot-dev-starter"
version = "0.1.0"
description = "A starter template for Copilot-powered development with SDD and TDD"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Development Team", email = "dev@example.com"},
]
keywords = ["copilot", "development", "testing", "sdd", "tdd"]

dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.7.0",
    "flake8>=6.1.0",
    "pylint>=2.17.0",
    "pyright>=1.1.320",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.1",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --strict-markers --tb=short"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
min_percentage = 80

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
]

[tool.pylint.format]
max-line-length = 100

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__", "venv", "**/.*"]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
